--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,5 +1,5 @@
 .bg{
-  background: url("../../assets/background.jpg");
+  background: url("../../assets/images/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
